--- a/dev/templates/home.html
+++ b/dev/templates/home.html
@@ -1,9 +1,5 @@
 <h1>Welcome</h1>
 
-<p>
-  {{movieResults.title}}
-</p>
-
-<ul ng-repeat="item in movieResults.genres">
-  <li>{{item.name}}</li>
-</ul>
+<code>
+  {{movieResults}}
+</code>
