--- a/app/templates/answer.html
+++ b/app/templates/answer.html
@@ -1,8 +1,4 @@
-<h3>Did you win or lose?</h3>
+<h3 ng-show="gameState.win">You Win!</h3>
+<h3 ng-hide="gameState.win">You Lose!</h3>
 
-<p ng-show="gameState.win">You Win!</p>
-<p ng-hide="gameState.win">You Lose!</p>
-
-<p>The Correct answer: <b>{{gameState.movie.title}}</b></p> 
-
-<a href="/">Try again</a>
+<p>The Correct answer: <b>{{gameState.movie.title}}</b></p>
