--- a/app/templates/layout/footer.html
+++ b/app/templates/layout/footer.html
@@ -5,7 +5,7 @@
 
 <div class="row">
   <div class="col-xs-6">
-    <a href="/#/" class="btn btn-primary btn-sm active" role="button">New Question</a>
+    <a href="/movie-game/app/#/" class="btn btn-primary btn-sm active" role="button">New Question</a>
   </div>
   <div class="col-xs-6">
     <small>This product uses the TMDb API but is not endorsed or certified by TMDb.</small>
